# mambax

./: model.py  pyproject.toml  train.py
.github/: README.md
.github/workflows/: python.yml
configs/: default.py
tests/: test_model.py
