[project]
name = "acme"
version = "0.0.1"
description = "python template"
readme = ".github/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "clu>=0.0.12",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "flax>=0.10.6",
    "huggingface-hub>=0.33.0",
    "jaxtyping>=0.3.2",
    "ml-collections>=1.1.0",
    "safetensors>=0.5.3",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.12.0",
]
wandb = [
    "wandb>=0.20.1",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
	"ignore::UserWarning"
]

